# spimex_api_with_test

./: pyproject.toml  pytest.ini
source/: celery_config.py  config.py  main.py
source/api/: spimex.py
source/celery_tasks/: tasks.py
source/database/: database.py
source/models/: __init__.py  spimex.py
source/repositories/: spimex.py
source/schemas/: spimex.py
source/schemas/aliases/: description.py
source/schemas/serializers/: serializers.py
source/services/: spimex.py
source/utils/: cache.py  repository.py  service.py  unit_of_work.py
tests/: conftest.py
tests/fakes/: fake_api_request_params.py  fake_params_schema.py  fake_spimex_excepted_data.py  fake_spimex_schema.py
tests/unit/: conftest.py
tests/unit/api/: test_spimex_api.py
tests/unit/models/: test_spimex_model.py
tests/unit/repository/: test_spimex_repository.py
tests/unit/schemas/: test_spimex_schemas.py
tests/unit/services/: test_spimex_service.py
tests/unit/utils/: test_repository.py  test_service.py  test_unit_of_work.py
